# games-shop-project

./: docker-compose.yml  dockerfile  error_handlers.py  logger.py  main.py  pyproject.toml  pytest.ini  readme.md
api_v1/: service.py  views.py
api_v1/games/: crud.py  dependencies.py  schemas.py  views.py
api_v1/genres/: crud.py  dependencies.py  schemas.py  views.py
api_v1/reviews/: crud.py  dependencies.py  schemas.py  views.py
api_v1/superuser/: crud.py  schemas.py  views.py
api_v1/users/: crud.py  dependencies.py  schemas.py  views.py
background_tasks/: background_email_sender.py
core/: __init__.py  config.py  taskiq_broker.py
core/models/: __init__.py  base.py  game.py  game_genre.py  genre.py  order.py  order_game.py  review.py  superuser.py  user.py  verification_token.py
core/models/mixins/: __init__.py  created_at_mixin.py  updated_at_mixin.py
docker/: celery.sh  flower.sh  taskiq.sh
mailing/: email_helper.py
middleware/: logging_middleware.py  process_time_middleware.py  register_middleware.py  requests_count_middleware.py
tasks/: __init__.py  celery.py  tasks.py  welcome_email_notification.py
templates/: index.html
tests/: conftest.py  test_main.py
utils/: __init__.py  case_converter.py  db_helper.py  delete_expired_verification_tokens.py  email_helper.py  jwt_helpers.py  password_helpers.py  super_user_validation.py  token_helpers.py
