[project]
name = "games-shop-project"
version = "0.1"
description = ""
authors = [
    {name = "Ivan Shishkin",email = "ivanshishkin99@bk.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "cryptography (>=45.0.3,<46.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "aiosmtplib (>=4.0.1,<5.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "taskiq (>=0.11.17,<0.12.0)",
    "taskiq-aio-pika (>=0.4.2,<0.5.0)",
    "requests (>=2.32.4,<3.0.0)",
    "fastapi-utils[all] (>=0.8.0,<0.9.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "httptools (>=0.6.4,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
